# gaia-lsp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLAN.md  README.md  index.md  log.md  lsp-capabilities.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: agent-review.yml  ci.yml  pr-contract.yml  publish-pypi.yml  publish-vscode.yml
diagnostics/: diagnostic-engine-v1.schema.json
docs/: GAIA_RULE_COVERAGE.md  IMPLEMENTATION_NOTES.md  LLM-WIKI-PLAN.md  PYPI_PUBLISHING.md  VSCODE_MARKETPLACE_PUBLISHING.md
gaia-vscode/: .vscodeignore  CHANGELOG.md  README.md  SUPPORT.md  package-lock.json  package.json  tsconfig.json
gaia-vscode/src/: diagnostics.ts  extension.ts  language.ts
gaia-vscode/test/: diagnostics.test.ts
raw/assets/: README.md
scripts/: build.sh  check_pypi_readiness.sh  check_upstream_examples.sh  configure_vsce.sh  lint.sh  test.sh  typecheck.sh
src/gaia_lsp/: __init__.py  analyzer.py  cli.py  diagnostics.py  rules.py  server.py  tool.py
tests/: test_analyzer.py  test_diagnostic_schema.py  test_expanded_rules.py  test_file_format_coverage.py  test_golden_envelopes.py  test_release_metadata.py  test_rule_catalog.py  test_server.py  test_tool_cli.py  test_upstream_fixtures.py
tests/fixtures/invalid/: claim_missing_content.py
tests/fixtures/upstream/: README.md
tests/fixtures/upstream/galileo-v0-5-gaia/: pyproject.toml
tests/fixtures/upstream/galileo-v0-5-gaia/src/galileo_v0_5/: __init__.py  priors.py
tests/fixtures/upstream/galileo-v0-5-gaia/src/galileo_v0_5/authored/: __init__.py
tests/fixtures/upstream/mendel-v0-5-gaia/: CLI-AUTHORED.md  pyproject.toml  references.json
tests/fixtures/upstream/mendel-v0-5-gaia/src/mendel_v0_5/: __init__.py  priors.py  probabilities.py
tests/fixtures/upstream/mendel-v0-5-gaia/src/mendel_v0_5/authored/: __init__.py
tests/fixtures/valid/: clean_claim.py
tests/golden/: check_clean.json  check_gaia010.json  error_missing_file.json
wiki/synthesis/: openqc-agent-context.md
